--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ $('.head').css('background','transparent');
 	<a href="#b_1" class="btn">О проекте</a>
 	<a href="#b_2" class="btn">Начать играть</a>
 	<a href="https://discord.gg/HsxSPyg7RG" class="btn">Дискорд</a>
-	<a href="#b_3" class="btn">Карта</a>
+	<a href="map.html" class="btn">PochkaMaps</a>
 
 </div>
 
