--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ $('.head').css('background','transparent');
 	<a href="#b_1" class="btn">О проекте</a>
 	<a href="#b_2" class="btn">Начать играть</a>
 	<a href="https://discord.gg/HsxSPyg7RG" class="btn">Дискорд</a>
-	<a href="http://s23.joinserver.ru:25809/" class="btn">PochkaMaps</a>
+	<a href="map.html" class="btn">PochkaMaps</a>
 
 </div>
 
@@ -96,7 +96,7 @@ $('.head').css('background','transparent');
 <div class="div-third-atall">
 <div class="div-third" id="b_3">
 	<center><h1>КАРТА МАЙНКРАФТ СЕРВЕРА В РЕАЛЬНОМ ВРЕМЕНИ</h1>
-	<script src="//megatimer.ru/get/1009d3e513eacb57af5eacc69b5645f5.js"></script>
+	<iframe class = "map" src="http://s23.joinserver.ru:25809/"  frameborder="0" width="50%" height="400" />
 	</center>
 </div>
 </div>
