--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ $('.head').css('background','transparent');
 <div class="div-third-atall">
 <div class="div-third" id="b_3">
 	<center><h1>КАРТА МАЙНКРАФТ СЕРВЕРА В РЕАЛЬНОМ ВРЕМЕНИ</h1>
-	<iframe class = "map" src="http://s23.joinserver.ru:25809/"  frameborder="0" width="50%" height="400" />
+	<a href="http://s23.joinserver.ru:25809/" class="btn-two">POCHKAMAPS</a> 
 	</center>
 </div>
 </div>
