--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ $('.head').css('background','transparent');
 </div>
 </div>
 <footer>
-    <a href = "https://discord.gg/HsxSPyg7RG" class="foolink"> ДИСКОРД </a> <a href="https://twitch.tv/lingkeras1n">KeRas1n</a><br><br>
+    <a href = "https://discord.gg/HsxSPyg7RG" class="foolink"> ДИСКОРД </a> <a href="https://twitch.tv/lingkeras1n">KeRas1n</a><br><br><a href = "votes.html">VOTE</a><br>
     <text> We are in no way affiliated with or endorsed by Mojang, AB.</text>
 </footer>
 
