--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ $('.head').css('background','transparent');
 				<p class = "toptitle">1.16.5</p>
 				<span class="server-online">⬤ Сервер оффлайн<style>.server-online{color:red;}</style></span><br>
 
-    			<span class="server-online-players" id="server-online-players">0</span> / <span class="server-online-players-max" id="server-online-players">20</span> 
+    			<span class="server-online-players" id="server-online-players"></span> / <span class="server-online-players-max" id="server-online-players"></span> 
 			</div>
 </header>
 
