--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<script src="https://mcapi.us/scripts/minecraft.min.js"></script>
 	<script type="text/javascript" src="main.js"></script>
 <script>
-    MinecraftAPI.getServerStatus('pochkacraft.joinserver.ru', {
+    MinecraftAPI.getServerStatus('s23.joinserver.ru', {
         port: 25737 // optional, only if you need a custom port
     }, function (err, status) {
         if (err) {
