--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         // you can change these to your own message!
         document.querySelector('.server-online-players').innerHTML = status.players.now;
-        document.querySelector('.server-online').innerHTML = status.online ? '⬤ Сервер онлайн <style>.server-online{color:green; }</style>' : '⬤ Сервер оффлайн<style>.server-online{color:red;}</style>';
+        document.querySelector('.server-online').innerHTML = status.online ? '⬤ Сервер онлайн <style>.server-online{color:LimeGreen; }</style>' : '⬤ Сервер оффлайн<style>.server-online{color:red;}</style>';
         document.querySelector('.server-online-players-max').innerHTML = status.players.max;
     });
 </script>
@@ -63,12 +63,18 @@ $('.head').css('background','transparent');
 					POCHKA CRAFT
 				</h1>
 				<p class = "toptitle">1.16.5</p>
+				<p class = "mainp">"Не СП, не майншилд, и не Пепеленд"</p><br>
 				<span class="server-online">⬤ Сервер оффлайн<style>.server-online{color:red;}</style></span><br>
 
-    			<span class="server-online-players" id="server-online-players">0</span> / <span class="server-online-players-max" id="server-online-players">20</span> 
+    			<span class="server-online-players" id="server-online-players">0</span> / <span class="server-online-players-max" id="server-online-players">20</span> <br>
+    			
 			</div>
 </header>
+<div class="div-zero-atall">
+	<div class="div-zero">
 
+	</div>
+</div>
 <div class="div-first-atall" id="b_1">
 	<div class="gif">
 <img src="img/ovca.gif" width="320px">
