--- a/index.html
+++ b/index.html
@@ -102,8 +102,17 @@ $('.head').css('background','transparent');
 <div class="div-third-atall">
 <div class="div-third" id="b_3">
 	<center><h1>КАРТА МАЙНКРАФТ СЕРВЕРА В РЕАЛЬНОМ ВРЕМЕНИ</h1>
-	<a href="http://s23.joinserver.ru:25809/" class="btn-two">POCHKAMAPS</a> 
-	</center>
+	<a href="http://s23.joinserver.ru:25809/" class="btn-two">POCHKAMAPS</a> <br>
+	</center><br>
+<hr>
+<center>
+<div style="overflow: hidden;  background-color: #EEEEEE; ">
+<iframe src="http://mycount.org/ru/?wm=4&t=1632517200000&tz=338480&t1=0KEg0L7RgtC60YDRi9GC0LjRjyDRgdC10YDQstC10YDQsCDQv9GA0L7RiNC70L4%3D&t2=&fid=4" scrolling="no" style="height: 330px; border: 0px none; width: 600px; margin-top: -80px; margin-left: -5px; ">
+</iframe>
+</div>
+</center>
+
+
 </div>
 </div>
 <footer>
