--- a/404.html
+++ b/404.html
@@ -1,9 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;800&display=swap" rel="stylesheet"> 
 	<title>Страница не найдена</title>
 </head>
 <body>
-Ошибка 404
+	<style type="text/css">
+		.title{
+			
+			font-size: 110px;
+		}
+		text{
+			font-family: 'Raleway', sans-serif;
+		}
+		a{
+			font-family: 'Raleway', sans-serif;
+			color: grey;
+			text-decoration: none;
+		}
+		a:hover{
+			color: black;
+			text-decoration: underline; ;
+		}
+	</style>
+
+	
+	<center>
+	<img src="img/logo.png" width="400px"><br>
+<text class = "title">404</text><br>
+<text>Страница не найдена</text><br>
+<a href="https://keras1n.github.io/pochkacraft.github.io/"> На главную</a>
+</center>
 </body>
 </html>
