--- a/404.html
+++ b/404.html
@@ -11,6 +11,7 @@
 		.title{
 			
 			font-size: 110px;
+			padding: 50px;
 		}
 		text{
 			font-family: 'Raleway', sans-serif;
@@ -24,11 +25,14 @@
 			color: black;
 			text-decoration: underline; ;
 		}
+		.logo{
+			padding-top:  150px;
+		}
 	</style>
 
-	
+
 	<center>
-	<img src="img/logo.png" width="400px"><br>
+	<img src="img/logo.png" width="400px" class="logo"><br>
 <text class = "title">404</text><br>
 <text>Страница не найдена</text><br>
 <a href="https://keras1n.github.io/pochkacraft.github.io/"> На главную</a>
