--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="css/main.css">
 	<title>PochkaCraft</title>
 	<script src="https://mcapi.us/scripts/minecraft.min.js"></script>
-	<script type="text/javascript" src="main.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
 <script>
     MinecraftAPI.getServerStatus('s23.joinserver.ru', {
         port: 25737 // optional, only if you need a custom port
