--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ $('.head').css('background','transparent');
 				</h1>
 				<p class = "toptitle">1.16.5</p>
 				<p class = "mainp">"Не СП, не майншилд, и не Пепеленд"</p><br>
+	<a href = "freedays.html">СЕЙЧАС БЕСПЛАТНЫЕ ВЫХОДНЫЕ</a>
 				<span class="server-online">⬤ Сервер оффлайн<style>.server-online{color:red;}</style></span><br>
 
     			<span class="server-online-players" id="server-online-players">0</span> / <span class="server-online-players-max" id="server-online-players">20</span> <br>
