--- a/votes.html
+++ b/votes.html
@@ -4,7 +4,14 @@
 	<title>Проголосовать за почку</title>
 </head>
 <body>
+	<center>
 <a href="https://minecraftrating.ru/vote/129536/" onclick="window.open( 'https://minecraftrating.ru/vote/129536/' ); return false;"><img src="https://minecraftrating.ru/templates/theme/images/widgets/widget_vote.png" alt="Голосовать за сервер на minecraftrating.ru" title="Голосовать за сервер на minecraftrating.ru" width="88" height="31" /></a><br>
 <a href="https://hotmc.ru/vote-214660"> Проголосовать на hotmc</a>
+<br><br><br><br><br><br><br><br>
+Мы на других мониторингах (без голосований):<br>
+<a href="https://monitoringminecraft.ru/server/793388">monitoringminecraft.ru</a><br>
+<a href="https://servera-minecraft.net/server/46367">servera-minecraft.net</a>
+</center><br><br><br>
+<a href="https://keras1n.github.io/pochkacraft.github.io/">Назад</a>
 </body>
 </html>
