--- a/freedays.html
+++ b/freedays.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="css/main.css">
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
 
@@ -16,9 +17,14 @@
 </head>
 
 <body>
+	<div class="fix_block">
+<a href="halloween.html"><img width="350px" src="img/tikwa.png" border="0"/></a>
+	</div>
 	<center><h1>Об акции бесплатные дни</h1>
+		<div class="text-block">
 <p>"Бесплатные дни" - акция, на время которой на сервере не действует вайтлист, то есть он открыт для всех абсолютно бесплатно.</p>
 <p>В обычное же время на сервере установлен вайтлист. Ежемесячная проходка стоит всего лишь 30 рублей.</p>
+</div>
 <a href="index.html#b_2">Купить проходку</a></center>
 </body>
 </html>
