--- a/index.html
+++ b/index.html
@@ -65,12 +65,16 @@ $('.head').css('background','transparent');
 				<p class = "toptitle">1.16.5</p>
 				<p class = "mainp">"Не СП, не майншилд, и не Пепеленд"</p><br>
 				<a href = "freedays.html" class = "freedays-link">СЕЙЧАС БЕСПЛАТНЫЕ ДНИ</a><br>
+				<a href = "halloween.html" class = "ivent-link">ТЕКУЩИЙ ИВЕНТ: ХЭЛЛОУИН</a><br>
 				<span class="server-online">⬤ Сервер оффлайн<style>.server-online{color:red;}</style></span><br>
 
     			<span class="server-online-players" id="server-online-players">0</span> / <span class="server-online-players-max" id="server-online-players">20</span> <br>
     			
 			</div>
 </header>
+<div class="fix_block">
+<a href="halloween.html"><img width="350px" src="img/tikwa.png" border="0"/></a>
+	</div>
 <div class="div-zero-atall">
 	<div class="div-zero">
 
