--- a/halloween.html
+++ b/halloween.html
@@ -38,7 +38,7 @@
 	<div class="div-zero">
 		<center><p><h2>На старт. Внимание. Марш!</h2>  28.10.2021| 23:00</p>
 	<p>Первые заезды PochkaRace! На нашем ледяном треке, вы сможете как болеть за гонщиков, так и стать им!</p>
-		<p>ПОДРОБНАЯ И СВЕЖАЯ ИНФОРМАЦИЯ ---> <a src = "https://discord.gg/DATa8pxmt2">дискорд канал PochkaRace</a> </p>
+		<br>ПОДРОБНАЯ И СВЕЖАЯ ИНФОРМАЦИЯ ---> <a src = "https://discord.gg/DATa8pxmt2">дискорд канал PochkaRace</a> 
 	<img src="img/race2.png" width=50%></center>
 
 	</div>
