--- a/404.html
+++ b/404.html
@@ -15,6 +15,7 @@
 		}
 		text{
 			font-family: 'Raleway', sans-serif;
+			color: white;
 		}
 		a{
 			font-family: 'Raleway', sans-serif;
@@ -22,11 +23,14 @@
 			text-decoration: none;
 		}
 		a:hover{
-			color: black;
+			color: white;
 			text-decoration: underline; ;
 		}
 		.logo{
-			padding-top:  150px;
+			margin-top:  150px;
+		}
+		body{
+			background-color: #111111;
 		}
 	</style>
 
