--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+
 	 <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
 
@@ -12,7 +16,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet"> 
 	<meta charset="UTF-8">
+
 	<link rel="stylesheet" href="css/main.css">
+
 	<title>PochkaCraft</title>
 	<script src="https://mcapi.us/scripts/minecraft.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
@@ -29,16 +35,39 @@
         document.querySelector('.server-online').innerHTML = status.online ? '⬤ Сервер онлайн <style>.server-online{color:LimeGreen; }</style>' : '⬤ Сервер оффлайн<style>.server-online{color:red;}</style>';
         document.querySelector('.server-online-players-max').innerHTML = status.players.max;
     });
+
+  //  function copy() {
+  /* Get the text field */
+ // var copyText = document.getElementById("ipadres");
+
+  /* Select the text field */
+  //copyText.select();
+
+  /* Copy the text inside the text field */
+  //document.execCommand("copy");
+
+  /* Alert the copied text */
+ // alert("Ip адрес сервера скопирован");
+
+  function copyToClipboard(element) {
+  var $temp = $("<input>");
+  $("body").append($temp);
+  $temp.val($(element).text()).select();
+  document.execCommand("copy");
+  $temp.remove();
+  alert("Ip адрес сервера скопирован");
+}
+//} 
 </script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script type="text/javascript">$(window).scroll(function () {
+<script type="text/javascript">
+	$(window).scroll(function () {
 if ($(window).scrollTop() >= 80) {
 $('.head').css('background','#212121');
 } else {
 $('.head').css('background','transparent');
 }
 });</script>
-
 
 </head>
 
@@ -47,25 +76,40 @@ $('.head').css('background','transparent');
 <div class="head" >
 	<img src="img/logo.png" width="250px" class="logo">
 	
-	
-	<a href="#b_1" class="btn">О проекте</a>
-	<a href="#b_2" class="btn">Начать играть</a>
+<style type="text/css">#wait{cursor: wait;}</style>
+
+
+<div class="dropdown" id="menubutton">
+  <img src="img/menu.png" class="menubutton" alt="menuknop" width="70px" class="dropbtn">
+  <div class="dropdown-content">
+    <a href="rules" class="btn">Правила</a>
+    <a href="wiki" class="btn">Вики</a>
+    <a href="https://discord.gg/HsxSPyg7RG" class="btn">Дискорд</a>
+	<a href="http://s23.joinserver.ru:25809/" class="btn">PochkaMaps</a>
+  </div>
+</div> 
+
+<div class="realmenu">
+	<a href="rules" class="btn">Правила</a>
+	<a href="wiki" class="btn">Вики</a>
 	<a href="https://discord.gg/HsxSPyg7RG" class="btn">Дискорд</a>
 	<a href="http://s23.joinserver.ru:25809/" class="btn">PochkaMaps</a>
-
+</div>
 </div>
 
 <header class="header">
-
 <div class="offer">
-				<p class = "toptitle">pochkacraft.joinserver.ru</p>
+
+				<p class = "toptitle" id="ipadres">pochkacraft.joinserver.ru</p>
 				<h1>
 					POCHKA CRAFT
 				</h1>
 				<p class = "toptitle">1.16.5</p>
 				<p class = "mainp">"Не СП, не майншилд, и не Пепеленд"</p><br>
-				<a href = "freedays.html" class = "freedays-link">СЕЙЧАС БЕСПЛАТНЫЕ ДНИ</a><br>
+				<a href = "freedays.html" class = "freedays-link">СЕЙЧАС БЕСПЛАТНЫЕ ДНИ</a>
 				<a href = "halloween.html" class = "ivent-link">ТЕКУЩИЙ ИВЕНТ: ХЭЛЛОУИН</a><br>
+				<a href="#b_2" class="buy"><img src="img/buy.png"  height="18px" >Купить доступ на сервер</a><br>
+				<button class ="copy" onclick="copyToClipboard('#ipadres')"><img src="img/copy-logo.png" height="18px">Скопировать IP</button><br>
 				<span class="server-online">⬤ Сервер оффлайн<style>.server-online{color:red;}</style></span><br>
 
     			<span class="server-online-players" id="server-online-players">0</span> / <span class="server-online-players-max" id="server-online-players">20</span> <br>
@@ -75,25 +119,20 @@ $('.head').css('background','transparent');
 <div class="fix_block">
 <a href="halloween.html"><img width="350px" src="img/tikwa.png" border="0"/></a>
 	</div>
-<div class="div-zero-atall">
-	<div class="div-zero">
 
-	</div>
+<img src="img/ovca.gif" width="320px" class="gif">
+<div class="div-first-atall" id="b_1">	
+<div class="textik">
+<h1>PochkaCraft</h1>
+<p> - сервер без кучи плагинов и дурацких донатов. Только ваннила, только люди. </p>
+<p>Стройте свой город или селитесь в уже построеных. Ваш город это только ваш город! Принимайте законы, вводите свою валюту, делайте свой политический строй, всё что вас ограничивает это лишь ваша собственная фантазия!</p>
+<h1>Приватный?</h1>
+<p>Доступ на сервер ограничен и доступен по платной проходке. <br>Мы хотим построить слаженное и хорошое комьюнити из добросовестных игроков. Также стоит подметить что на сервере нет никаких донатерских привилегий.</p>
 </div>
-<div class="div-first-atall" id="b_1">
-	<div class="gif">
-<img src="img/ovca.gif" width="320px">
 </div>
-<div class="div-first">
 
-   <p> Pochka Craft это сервер про людей, а не про плагины. Идея крайне проста - политика и общество. Когда у тебя уже при регистрации имеются все возможные предметы, и после постройки своего дома игра на сервере заканчивается - это большинство сегодняшних бесплатных серверов.</p>
-<p>Почка крафт это ванильный уютный приватный сервер, сплочайтесь в большие города, принимайте участие на политической арене, стройте огромные постройки, всё это тут. Самое главное что на нашем проекте у вас развязаны руки. </p>
-<p>Ваш город это только ваш город! Принимайте законы, вводите свою валюту, делайте свой политический строй, всё что вас ограничивает это лишь ваша собственная фантазия </p>
-
-</div>
-</div>
 <div class="div-second-atall" id="b_2">
-<div class="div-second">
+	<br><br><br>
 	<text class="price">30</text><text>рублей</text><text class="price">= 30</text><text>дней</text><br>
    Вы можете приобрести проходку сразу на несколько месяцев, 2,3,4  <br>
 ВАЖНО!<br>
@@ -103,21 +142,47 @@ $('.head').css('background','transparent');
 4. Возврат средств за любые услуги не предоставляется. <br>
    <a href="https://new.donatepay.ru/@pochka-craft" class="btn-two">КУПИТЬ</a> 
 </div>
-</div>
+
 <div class="div-third-atall">
-<div class="div-third" id="b_3">
+<div class="div-third" id="b_3"><br>
+<center><h1>ОТВЕТЫ НА ВОПРОСЫ</h1></center>
+
+<div class = "question">
+	<h2>Нужна ли лицензия?</h2>
+
+Нет, для игры на сервере <br>лицензия не нужна.
+</div>
+
+<div class = "question">
+	<h2>Какой айпи и версия??</h2>
+pochkacraft.joinserver.ru <br>Версия - 1.16.5
+</div>
+
+<div class = "question">
+	<h2>Как жить без приватов?</h2>
+У нас есть логирование <br>блоков, подробнее - <a href="coreprotect">CoreProtect</a>
+</div>
+
+<div class = "question">
+	<h2>Можно ли играть с телефона?</h2>
+Нет.<br>Сервер работает только на Java Edition.
+</div>
+
+</div>
+
+<div class="div-fourth-atall">
+<div class="div-fourth" id="b_3"><br>
 	<center><h1>КАРТА МАЙНКРАФТ СЕРВЕРА В РЕАЛЬНОМ ВРЕМЕНИ</h1>
 	<a href="http://s23.joinserver.ru:25809/" class="btn-two">POCHKAMAPS</a> <br>
+	<iframe src="http://s23.joinserver.ru:25809" width="50%" height="400px"></iframe>
 	</center><br>
-
-
-
 </div>
-</div>
+
 <footer>
-    <a href = "https://discord.gg/HsxSPyg7RG" class="foolink"> ДИСКОРД </a> <a href="https://twitch.tv/lingkeras1n">KeRas1n</a><br><br><a href = "votes.html">VOTE</a><br>
-    <text> We are in no way affiliated with or endorsed by Mojang, AB.</text>
+    <a href = "https://discord.gg/HsxSPyg7RG" class="foolink"> Дискорд </a> <br><a href = "votes.html">Проголосовать на мониторингах</a><br>
+    <text>© PochkaCraft 2021 | <a href="https://twitch.tv/lingkeras1n">Made by KeRas1n</a></text><br>
+    <text> We are in no way affiliated with or endorsed by Mojang, AB.</text><br>
+    <text>Вся размещенная информация на сайте не является публичной офертой.</text>
 </footer>
-
 </body>
 </html>
