--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ pochkacraft.joinserver.ru <br>Версия - 1.16.5
 <div class="div-fourth" id="b_3"><br>
 	<center><h1>КАРТА МАЙНКРАФТ СЕРВЕРА В РЕАЛЬНОМ ВРЕМЕНИ</h1>
 	<a href="http://s23.joinserver.ru:25809/" class="btn-two">POCHKAMAPS</a> <br>
-	<iframe src="https://s23.joinserver.ru:25809" width="50%" height="400px"></iframe>
+	<img src="img/map.png" width = "800px">
 	</center><br>
 </div>
 
