--- a/wiki.html
+++ b/wiki.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<title>Вики - PochkaCraft</title>
-
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript">
 	$(window).scroll(function () {
@@ -17,7 +17,7 @@ $('.head').css('background','transparent');
 <body>
 
 <div class="head" >
-	<a href="index.html"><img src="img/logo.png" width="250px" class="logo"></a>
+	<a href="index"><img src="img/logo.png" width="250px" class="logo"></a>
 	
 <style type="text/css">#wait{cursor: wait;}</style>
 
