--- a/rules.html
+++ b/rules.html
@@ -17,7 +17,7 @@ $('.head').css('background','transparent');
 <body>
 
 <div class="head" >
-	<a href="index.html"><img src="img/logo.png" width="250px" class="logo"></a>
+	<a href="index"><img src="img/logo.png" width="250px" class="logo"></a>
 	
 <style type="text/css">#wait{cursor: wait;}</style>
 
