--- a/index.html
+++ b/index.html
@@ -168,6 +168,12 @@ pochkacraft.joinserver.ru <br>Версия - 1.16.5
 Нет.<br>Сервер работает только на Java Edition.
 </div>
 
+<div class = "question">
+	<h2>Как включить войс чат?</h2>
+Для этого необходимо просто установить мод.
+<a href="voice">Подробнее</a>
+</div>
+
 </div>
 
 <div class="div-fourth-atall">
