--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ pochkacraft.joinserver.ru <br>Версия - 1.16.5
 
 <div class = "question">
 	<h2>Как включить войс чат?</h2>
-Для этого необходимо просто установить мод.
+Для этого необходимо просто установить мод.<br>
 <a href="voice">Подробнее</a>
 </div>
 
