--- a/wiki.html
+++ b/wiki.html
@@ -41,7 +41,7 @@ $('.head').css('background','transparent');
 </div>
 
 <header>
-	<center><br><br><h1>ВИКИ ПОЧКАКРАФТ<br><br></h1>
+	<center><br><br><h1>ВИКИ ПОЧКАКРАФТ</h1>
 		<h2>Тут можно ознакомиться со справочными статьями.</h2>
 	</center>
 
