--- a/buy.html
+++ b/buy.html
@@ -64,5 +64,11 @@ $('.head').css('background','transparent');
 	<a href="https://new.donatepay.ru/@pochka-craft" class="btn">Оформить</a>
 </div>
 </div>
+<footer>
+    <a href = "https://discord.gg/HsxSPyg7RG" class="foolink"> Дискорд </a> <br><a href = "votes.html">Проголосовать на мониторингах</a><br>
+    <text>© PochkaCraft 2021 | <a href="https://twitch.tv/lingkeras1n">Made by KeRas1n</a></text><br>
+    <text> We are in no way affiliated with or endorsed by Mojang, AB.</text><br>
+    <text>Вся размещенная информация на сайте не является публичной офертой.</text>
+</footer>
 </body>
 </html>
