--- a/coreprotect.html
+++ b/coreprotect.html
@@ -55,7 +55,7 @@ $('.head').css('background','transparent');
 <br>
 <br>
 <center><h2>Как использовать?</h2></center>
-Теперь каждый игрок может использовать инспектор для обнаружения гриферов. Конечно, самому наводить правосудие не надо, лучше написать в <a href="">специальный канал в дискорде.</a>
+Теперь каждый игрок может использовать инспектор для обнаружения гриферов. Конечно, самому наводить правосудие не надо, лучше написать в <a href="https://discord.gg/xEskcvHjGY">специальный канал в дискорде.</a>
 <br><br>
 <center><h2>История предметов</h2></center>
 <br>
