--- a/rules.html
+++ b/rules.html
@@ -43,18 +43,15 @@ $('.head').css('background','transparent');
 <div class="article">
 	<text>
 	<h3>
-<center><h2>Запрещено:</h1></center>
-1. Гриферство (в городах).<br>
-2. Любая деформация/поломка построек, не принадлежащих Вам (в городах).<br>
-3. Использование чужих сундуков и подобных блоков (в городах).<br>
-4. Читерство (так же использование модов, дающие преимущество в игре).<br>
-5. Мешать другим игрокам.<br>
-6. Флуд в любом проявлении.<br>
-7. Реклама любого постороннего контента.<br>
-8. Нарушение правил платформы Twitch.<br>
-9. Оскорбительное и токсичное отношение (в любом проявлении) к игрокам, родным и администрации сервера.<br>
-10. Запрещены любые постройки, понижающие эффективность работы сервера (лаг машины, большие фермы)<br>
-11. Запрещен дюп. <br>
+<center><h2>Запрещено:</h1></center><br>
+1. Читерство (так же использование модов, дающие преимущество в игре).<br>
+2. Мешать другим игрокам.<br>
+3. Флуд в любом проявлении.<br>
+4. Реклама любого постороннего контента.<br>
+5. Нарушение правил платформы Twitch.<br>
+6. Оскорбительное и токсичное отношение (в любом проявлении) к игрокам, родным и администрации сервера.<br>
+7. Запрещены любые постройки, понижающие эффективность работы сервера (лаг машины, большие фермы)<br>
+8. Запрещен дюп. <br>
 
 </h3>
 </text>
