--- a/rules.html
+++ b/rules.html
@@ -51,6 +51,8 @@ $('.head').css('background','transparent');
 5. Оскорбительное и токсичное отношение (в любом проявлении) к игрокам, родным и администрации сервера.<br>
 6. Запрещены любые постройки, понижающие эффективность работы сервера (лаг машины, большие фермы)<br>
 7. Запрещен дюп. <br>
+8. Запрещены убийства в городах. <br>	
+9. Запрещена деформация и использование чужих блоков, сундуков и т.д.<br>
 
 </h3>
 </text>
