--- a/coreprotect.html
+++ b/coreprotect.html
@@ -55,19 +55,19 @@ $('.head').css('background','transparent');
 <br>
 <br>
 <center><h2>Как использовать?</h2></center>
-Теперь каждый игрок может использовать инспектор для обнаружения гриферов. Конечно, самому наводить правосудие не надо, лучше написать в <a href="https://discord.gg/xEskcvHjGY">специальный канал в дискорде.</a>
+Теперь каждый игрок может использовать инспектор для обнаружения гриферов. Конечно, самому наводить правосудие не надо, лучше написать в <a href="">специальный канал в дискорде.</a>
 <br><br>
 <center><h2>История предметов</h2></center>
 <br>
 	Введите <span class="redmark">/co i</span>, для активации/деактивации инспектора.
 	<br>Теперь если нажать <span class="redmark">ПКМ</span> по сундуку (шалкеру, печке и тд.), в чате инспектор отобразит изменения и перемещения предметов в нём, и временем когда это было сделано. На нашем сервере Инспектор был переведен на русский дабы не возникало затруднений.<br>
-	<img src="img/co-pkm.png">
+	<img src="img/co-lkm.png">
 <center><h2>История блоков</h2></center>
 <br>
 В режиме <span class="redmark">/co i</span> по нажатию <span class="redmark">ЛКМ</span> можно также смотреть историю блоков, кто сюда что ставил и ломал. 
 
 <br>
-<img src="img/co-lkm.png">
+<img src="img/co-pkm.png">
 
 </div>
 
