--- a/rules.html
+++ b/rules.html
@@ -43,16 +43,18 @@ $('.head').css('background','transparent');
 <div class="article">
 	<text>
 	<h3>
-<center><h2>Запрещено:</h1></center><br>
-1. Читерство (так же использование модов, дающие преимущество в игре).<br>
-2. Флуд в любом проявлении.<br>
-3. Реклама любого постороннего контента.<br>
-4. Нарушение правил платформы Twitch.<br>
-5. Оскорбительное и токсичное отношение (в любом проявлении) к игрокам, родным и администрации сервера.<br>
-6. Запрещены любые постройки, понижающие эффективность работы сервера (лаг машины, большие фермы)<br>
-7. Запрещен дюп. <br>
-8. Запрещены убийства в городах. <br>	
-9. Запрещена деформация и использование чужих блоков, сундуков и т.д.<br>
+<center><h2>Запрещено:</h1></center>
+1. Гриферство (в городах).<br>
+2. Любая деформация/поломка построек, не принадлежащих Вам (в городах).<br>
+3. Использование чужих сундуков и подобных блоков (в городах).<br>
+4. Читерство (так же использование модов, дающие преимущество в игре).<br>
+5. Мешать другим игрокам.<br>
+6. Флуд в любом проявлении.<br>
+7. Реклама любого постороннего контента.<br>
+8. Нарушение правил платформы Twitch.<br>
+9. Оскорбительное и токсичное отношение (в любом проявлении) к игрокам, родным и администрации сервера.<br>
+10. Запрещены любые постройки, понижающие эффективность работы сервера (лаг машины, большие фермы)<br>
+11. Запрещен дюп. <br>
 
 </h3>
 </text>
