--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         port: 25737 // optional, only if you need a custom port
     }, function (err, status) {
         if (err) {
-            return document.querySelector('.server-status').innerHTML = 'Error loading status';
+            return document.querySelector('.server-status').innerHTML = 'Ошибка загрузки статуса.';
         }
 
         // you can change these to your own message!
@@ -61,13 +61,38 @@
 </script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript">
+	//Затемнение хеадера
 	$(window).scroll(function () {
 if ($(window).scrollTop() >= 80) {
 $('.head').css('background','#212121');
 } else {
 $('.head').css('background','transparent');
 }
-});</script>
+});
+//Мобильное меню
+$(function() {
+	var $menu_popup = $('.menu-popup');
+	
+	$(".menu-triger, .menu-close").click(function(){
+		$menu_popup.slideToggle(300, function(){
+			if ($menu_popup.is(':hidden')) {
+				$('body').removeClass('body_pointer');
+			} else {
+				$('body').addClass('body_pointer');
+			}					
+		});  
+		return false;
+	});			
+	
+	$(document).on('click', function(e){
+		if (!$(e.target).closest('.menu').length){
+			$('body').removeClass('body_pointer');
+			$menu_popup.slideUp(300);
+		}
+	});
+});
+
+</script>
 
 </head>
 
@@ -79,15 +104,30 @@ $('.head').css('background','transparent');
 <style type="text/css">#wait{cursor: wait;}</style>
 
 
-<div class="dropdown" id="menubutton">
-  <img src="img/menu.png" class="menubutton" alt="menuknop" width="70px" class="dropbtn">
-  <div class="dropdown-content">
-    <a href="rules" class="btn">Правила</a>
-    <a href="wiki" class="btn">Вики</a>
-    <a href="https://discord.gg/HsxSPyg7RG" class="btn">Дискорд</a>
-	<a href="http://s23.joinserver.ru:25809/" class="btn">PochkaMaps</a>
-  </div>
-</div> 
+
+
+<div class="menu">
+
+		<a class="menu-triger" href="#"></a>
+
+		<div class="menu-popup">
+
+			<a class="menu-close" href="#"></a>
+
+			<ul>
+				<li><a href="rules">Правила</a></li>
+
+				<li><a href="wiki">Вики</a></li>		
+
+				<li><a href="https://discord.gg/HsxSPyg7RG">Дискорд</a></li>
+
+				<li><a href="http://s23.joinserver.ru:25809/">PochkaMaps</a></li>
+
+			</ul>						
+
+		</div>
+
+	</div>
 
 <div class="realmenu">
 	<a href="rules" class="btn">Правила</a>
