--- a/index.html
+++ b/index.html
@@ -69,6 +69,19 @@ $('.head').css('background','#212121');
 $('.head').css('background','transparent');
 }
 });
+</script>
+
+</head>
+
+<body>
+
+<div class="head" >
+	<img src="img/logo.png" width="250px" class="logo">
+	
+<style type="text/css">#wait{cursor: wait;}</style>
+
+
+<script type="text/javascript">
 //Мобильное меню
 $(function() {
 	var $menu_popup = $('.menu-popup');
@@ -93,19 +106,6 @@ $(function() {
 });
 
 </script>
-
-</head>
-
-<body>
-
-<div class="head" >
-	<img src="img/logo.png" width="250px" class="logo">
-	
-<style type="text/css">#wait{cursor: wait;}</style>
-
-
-
-
 <div class="menu">
 
 		<a class="menu-triger" href="#"></a>
