--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ $(function() {
 </script>
 <div class="menu">
 
-		<a class="menu-triger" href="#"></a>
+		<a class="menu-triger" href="#"><img src="img/menu.png"></a>
 
 		<div class="menu-popup">
 
@@ -220,7 +220,8 @@ pochkacraft.joinserver.ru <br>Версия - 1.16.5
 <div class="div-fourth" id="b_3"><br>
 	<center><h1>КАРТА МАЙНКРАФТ СЕРВЕРА В РЕАЛЬНОМ ВРЕМЕНИ</h1>
 	<a href="http://s23.joinserver.ru:25809/" class="btn-two">POCHKAMAPS</a> <br>
-	<img src="img/map.png" width = "800px">
+	<img src="img/map.png" width = "60%"><br>
+<iframe src="https://discord.com/widget?id=875746859421937755&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 	</center><br>
 </div>
 
