--- a/index.html
+++ b/index.html
@@ -48,8 +48,12 @@
 <text>Так то PochkaCraft - ванильный, приватный сервер с платными/бесплатными проходками...</text><br>
 <text>Вся информация, чат, новости и вообще <span>весь движ в </span><a href="https://discord.gg/UF4HFUNJkN">дискорде</a></text><br>
 <br>
-<text>ДО НОВОГО СЕЗОНА И САЙТА</text>
+<a href="http://s23.joinserver.ru:25809/">PochkaMaps</a><br>
+<a href="wiki">Вики</a><br>
+<a href="voice">Войс чат</a><br>
 <br>
+<text>ДО НОВОГО СЕЗОНА И САЙТА</text>
+<br><br>
 <script src="//megatimer.ru/get/5820547f1dc61b6a857f98d484a5c27e.js"></script>
 </center>
 </body>
