--- a/map.html
+++ b/map.html
@@ -2,12 +2,90 @@
 <html>
 <head>
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" href="css/maps.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript">
+	$(window).scroll(function () {
+if ($(window).scrollTop() >= 80) {
+$('.head').css('background','#212121');
+} else {
+$('.head').css('background','transparent');
+}
+});</script>
+</head>
+<body>
+
+<div class="head" >
+	<a href="index"><img src="img/logo.png" width="250px" class="logo"></a>
+	
+<style type="text/css">#wait{cursor: wait;}</style>
+
+
+<script type="text/javascript">
+//Мобильное меню
+$(function() {
+	var $menu_popup = $('.menu-popup');
+	
+	$(".menu-triger, .menu-close").click(function(){
+		$menu_popup.slideToggle(300, function(){
+			if ($menu_popup.is(':hidden')) {
+				$('body').removeClass('body_pointer');
+			} else {
+				$('body').addClass('body_pointer');
+			}					
+		});  
+		return false;
+	});			
+	
+	$(document).on('click', function(e){
+		if (!$(e.target).closest('.menu').length){
+			$('body').removeClass('body_pointer');
+			$menu_popup.slideUp(300);
+		}
+	});
+});
+
+</script>
+<div class="menu">
+
+		<a class="menu-triger" href="#"></a>
+
+		<div class="menu-popup">
+
+			<a class="menu-close" href="#"></a>
+
+			<ul>
+				<li><a href="rules">Правила</a></li>
+
+				<li><a href="wiki">Вики</a></li>		
+
+				<li><a href="https://discord.gg/HsxSPyg7RG">Дискорд</a></li>
+
+				<li><a href="http://s23.joinserver.ru:25809/">PochkaMaps</a></li>
+
+			</ul>						
+
+		</div>
+
+	</div>
+
+<div class="realmenu">
+	<a href="rules" class="btn">Правила</a>
+	<a href="wiki" class="btn">Вики</a>
+	<a href="https://discord.gg/HsxSPyg7RG" class="btn">Дискорд</a>
+	<a href="http://s23.joinserver.ru:25809/" class="btn">PochkaMaps</a>
+</div>
+</div>
+<header>
+	<center><br><br><h1>Карта сервера</h1>
+	</center>
+
+</header>
 	<title>PochkaMaps</title>
 </head>
 <body style="margin:0px;padding:0px;overflow:hidden">
 
 	
-<iframe class = "map" src="http://s23.joinserver.ru:25809/"  frameborder="0" width="100%" height="1000" />
+<iframe class = "map" src="http://s23.joinserver.ru:25809/"  frameborder="0" width="100%" height="600" />
 </body>
 </html>
